# BackCat

./: .gitignore  README.md  caddyfile  docker-compose.yml  dockerfile  init.sh  makefile  piccolo_conf.py  prometheus.yml  pyproject.toml
.github/workflows/: build.yaml
backcat/: __init__.py
backcat/cmd/: __init__.py
backcat/cmd/server/: app.py  authorization.py  config.py  mw.py
backcat/cmd/server/api/v1/: __init__.py
backcat/cmd/server/api/v1/area/: ctrl.py  dto.py
backcat/cmd/server/api/v1/booking/: ctrl.py  dto.py
backcat/cmd/server/api/v1/camping/: ctrl.py  dto.py
backcat/cmd/server/api/v1/health/: ctrl.py  dto.py
backcat/cmd/server/api/v1/poi/: ctrl.py  dto.py
backcat/cmd/server/api/v1/review/: ctrl.py  dto.py
backcat/cmd/server/api/v1/user/: __init__.py  ctrl.py  dto.py
backcat/configs/: __init__.py  cors.py  csrf.py  jwt.py  log.py  redis.py  s3.py
backcat/database/: __init__.py  piccolo_app.py  projector.py  tables.py
backcat/database/piccolo_migrations/: backcat_database_2025_04_18t03_53_54_931413.py  backcat_database_2025_04_18t19_45_36_309546.py  backcat_database_2025_04_18t20_01_36_469555.py  backcat_database_2025_04_18t20_09_41_806624.py  backcat_database_2025_04_18t20_27_19_271167.py  backcat_database_2025_04_18t20_31_26_155686.py  backcat_database_2025_04_18t20_42_29_893869.py  backcat_database_2025_04_21t13_33_09_557434.py  backcat_database_2025_04_22t21_43_05_187515.py  backcat_database_2025_04_23t11_03_30_697988.py  backcat_database_2025_04_24t00_14_38_047599.py  backcat_database_2025_04_24t16_16_11_089270.py
backcat/domain/: __init__.py  area.py  base.py  booking.py  camping.py  id.py  poi.py  poi_kind.py  point.py  review.py  user.py
backcat/services/: __init__.py  area_repo.py  booking_repo.py  cache.py  camping_repo.py  errors.py  filestorage.py  poi_repo.py  review_repo.py  token.py  user_repo.py
k8s/: ingres.yml  secrets.yml
k8s/authentik/deployment/: server.yml  worker.yml
k8s/postgres/: config.yml
k8s/postgres/deployment/: main.yml
k8s/redis/deployment/: main.yml
k8s/redis/volume/: main.yml
k8s/server/: config.example.yml
k8s/server/deployment/: main.yml
